# fastapi_project

./: .coverage  pyproject.toml
fastapi_project/: app.py
tests/: test_app.py
